# agent-access

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
agent_access/: __init__.py  __main__.py  cli.py  server.py
ai_systemassist/: __init__.py  __main__.py  cli.py  server.py
website/: README.md  index.html  script.js  styles.css
website/docs/: index.html
