[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AI-SystemAssist"
version = "0.1.0"
description = "A simple HTTP server that lets AI agents (or curl) send shell commands to be executed with elevated privileges and receive the output."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "AI SystemAssist"}
]
keywords = ["agent", "ai", "command", "execution", "server", "remote"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "flask>=2.0,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
ai-systemassist = "ai_systemassist.cli:main"

[project.urls]
Homepage = "https://github.com/RishiSpace/agent-access"
Repository = "https://github.com/RishiSpace/agent-access"
Issues = "https://github.com/RishiSpace/agent-access/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_systemassist*"]
